Fixed horizontal scrolling

--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -28,7 +28,7 @@ h1, h2 {
 }
 
 h1 {
-   font-size: 2.75rem;
+   font-size: 3rem;
    width: 60%;
    margin: auto;
    padding-top: 1rem;
@@ -94,7 +94,6 @@ footer {
 }
 
 footer p {
-   width: 80%;
    padding: 0 12%;
    font-size: 1rem;
 }
@@ -131,9 +130,9 @@ footer p {
    .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 10px;
+      column-gap: 30px;
       justify-content: center;
-      max-width: 900px;
+      max-width: 950px;
       margin: 0 auto 1.5rem;
    }
 
